Fix inconsistent spacing

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -196,21 +196,22 @@
   &__title {
     padding-top: 15px;
     padding-bottom: 15px;
+    display: flex;
   }
 
   &__title-action {
     color: @osu-colour-h1;
-    margin-left: 5px;
+    margin-left: 10px;
+    display: flex;
 
     &::before {
       color: @osu-colour-f1;
       content: '•';
-      margin-right: 5px;
+      margin-right: 10px;
     }
   }
 
   &__title-section {
     font-weight: 600;
-    display: inline-flex; // strip extra spaces
   }
 }
